// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usageFactory Creates a usage string for a command group 1`] = `
"Usage: cli <subcommand> ...

This is a CLI

Subcommands:

echo"
`;

exports[`usageFactory Creates a usage string for a command without a parent 1`] = `
"Usage: echo [<word>] [<named args>] -- <str>

Positional arguments:

<word> : A word

Named arguments:

[--message <str>] : A string message please

\\"Double dash\\" arguments:

<str> : Another word"
`;

exports[`usageFactory Creates a usage string for a command without a parent command group 1`] = `
"Usage: cli echo [<word>] [<named args>] -- <str>

Positional arguments:

<word> : A word

Named arguments:

[--message <str>] : A string message please

\\"Double dash\\" arguments:

<str> : Another word"
`;

exports[`usageFactory Does not write usage for named argGroups if there are none 1`] = `
"Usage: foo
"
`;
